fix z-index

--- a/Themes/default/css/index.css
+++ b/Themes/default/css/index.css
@@ -2730,7 +2730,7 @@ dl.addrules dt.floatleft {
 .popup_window {
 	position: relative;
 	width: 480px;
-	z-index: 99;
+	z-index: 5;
 	padding: 0 6px 6px 6px;
 	box-shadow: 0 3px 6px rgba(0, 0, 0, 0.5);
 	border: 1px solid #777;
